Added SQL Script File to set up database. Please login to application with admin account and create Guest/student account. Admin Credentials: username : admin password: admin

--- a/TestPaper/ProjectX.csproj
+++ b/TestPaper/ProjectX.csproj
@@ -290,6 +290,7 @@
       <DependentUpon>DBModel.edmx</DependentUpon>
       <LastGenOutput>DBModel.cs</LastGenOutput>
     </Content>
+    <Content Include="script.txt" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Scripts\bootstrap.js" />
